gateway-apis/envoy/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-gateway
  namespace: envoy-gateway-system
  # annotations:
  #   service.beta.kubernetes.io/load-balancer-ip: 34.93.159.42
spec:
  gatewayClassName: public-envoy-gateway
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
        namespaces:
          from: All
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: wildcard-iplon-co-in-cert
          kind: Secret
    allowedRoutes:
      namespaces:
        from: All
  - name: tcp-8883
    port: 8883
    protocol: TCP
    allowedRoutes:
      kinds:
        - kind: TCPRoute
          group: gateway.networking.k8s.io
      namespaces:
        from: All
  - name: tcp-28443
    port: 28443
    protocol: TCP
    allowedRoutes:
      kinds:
        - kind: TCPRoute
          group: gateway.networking.k8s.io
      namespaces:
        from: All
  - name: amqps
    port: 5672
    protocol: TCP
    allowedRoutes:
      kinds:
        - kind: TCPRoute
          group: gateway.networking.k8s.io
      namespaces:
        from: All
